remaining issues: 'equals' after equaling a result, sometimes rounds answer with decimal, operation doesnt clear when press number after equals

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <div id="container">
         <h2>Calculator</h2>
         <div id="calculator">
-            <div id="output">5318008</div>
+            <div id="output-container">
+                <div id="output">5318008</div>
+            </div>
             <button type="button" id="clear">C</button>
             <button type="button" id="plusminus">+/-</button>
             <button type="button" id="percent">%</button>
