--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,6 +11,7 @@
     <script src="scripts.js" defer></script>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div id="container">
         <h2>Calculator</h2>
@@ -33,33 +35,30 @@
             <button type="button" id="2">2</button>
             <button type="button" id="1">1</button>
             <button type="button" id="+" class="orange">+</button>
-            <button type="button" id="0" class="zero">0</button>  
-            <button type="button" id=".">.</button> 
-            <button type="button" id="equals" class="orange">=</button> 
+            <button type="button" id="0" class="zero">0</button>
+            <button type="button" id=".">.</button>
+            <button type="button" id="equals" class="orange">=</button>
         </div>
     </div>
     <div id="title">
-        <h1 >Made by Carson</h1>
+        <h1>Made by Carson</h1>
         <svg style="width:130px; scale: .5;">
             <mask id="hole1">
-                <rect width="100%" height="100%" fill="white"/>
-                <circle r="45" cx="60" cy="50" fill="black"/>
+                <rect width="100%" height="100%" fill="white" />
+                <circle r="45" cx="60" cy="50" fill="black" />
             </mask>
 
             <mask id="hole2">
-                <rect width="100%" height="100%" fill="white"/>
-                <circle r="45" cx="90" cy="80" fill="black"/>
+                <rect width="100%" height="100%" fill="white" />
+                <circle r="45" cx="90" cy="80" fill="black" />
             </mask>
-            <circle r="50" cx="50" cy="50" mask="url(#hole1)" fill="darkred"/>
-            <circle r="50" cx="80" cy="80" mask="url(#hole2)" fill="darkred"/>
+            <circle r="50" cx="50" cy="50" mask="url(#hole1)" fill="darkred" />
+            <circle r="50" cx="80" cy="80" mask="url(#hole2)" fill="darkred" />
             <path
-            d="M47 29.5C53 13.9611 49 0.5 49 0.5C49 0.5 40 9.61848 28 14.5C15 19.7883 0 19 0 19C0 19 12 23.2905 23 22C35 20.5922 42 15.5 42 15.5C42 15.5 42.5 26 35.5 39C28.5 52 18 58 18 58C18 58 38.5 51.5135 47 29.5Z"
-            fill="darkred"
-            mask="url(#arrow)"
-            transform="translate(78 85)"
-            id="Arrowtip"
-            />
+                d="M47 29.5C53 13.9611 49 0.5 49 0.5C49 0.5 40 9.61848 28 14.5C15 19.7883 0 19 0 19C0 19 12 23.2905 23 22C35 20.5922 42 15.5 42 15.5C42 15.5 42.5 26 35.5 39C28.5 52 18 58 18 58C18 58 38.5 51.5135 47 29.5Z"
+                fill="darkred" mask="url(#arrow)" transform="translate(78 85)" id="Arrowtip" />
         </svg>
     </div>
 </body>
+
 </html>
